adicionando teste ollama

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -67,5 +67,9 @@
     <h2>Resposta</h2>
     <div id="response"></div>
   </div>
+
+  <div>
+    <a href="/llama">CHATBOT</a>
+  </div>
 </body>
 </html>
